--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-APP_NAME=Laravel
+APP_NAME=BackendTest
+APP_SERVICE=app.backend_test
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -9,11 +10,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql.backend_test
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=backend_test
+DB_USERNAME=backend_test
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
