refact: integration routes review

--- a/.env.example
+++ b/.env.example
@@ -60,6 +60,8 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 TOKEN_NAME=token_name
 
+# Não cheguei a testar essa integração para saber se essas credenciais são hipotéticas (imagino que sejam), 
+# mas é uma falha de segurança expor essas credenciais num arquivo versionado.
 BANKING_BASE_URL=https://api.banking.com.br/
 BANKING_CLIENT_ID=vexpenses
 BANKING_CLIENT_SECRET=78c83b12-29ab-4ecd-97a9-a9d88f836b8f
