refact: code review

--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,8 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 TOKEN_NAME=token_name
 
+//Não expor credencais na .env, mesmo que sejam credenciais de teste
+
 BANKING_BASE_URL=https://api.banking.com.br/
 BANKING_CLIENT_ID=vexpenses
 BANKING_CLIENT_SECRET=78c83b12-29ab-4ecd-97a9-a9d88f836b8f
